# MCMD2

./: Cargo.toml  README.md
src/: core.rs  curseforge.rs  display.rs  main.rs  mc_mod.rs  modrinth.rs  search_field.rs
src/curseforge/: connection.rs  data.rs  repository.rs
src/modrinth/: connection.rs  data.rs  repository.rs
src/ui/: tui.rs
src/ui/tui/: display.rs  glyphs.rs  panel.rs  panel_entry.rs
