[package]
name = "mcmd2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
isahc = { version = "1.7.2", features = ["json", "serde_json"] }
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
