[package]
name = "mcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.69"
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.26.1"
curl = "0.4.44"
open = "5.0.0"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
opt-level = "s"