[package]
name = "mcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.27.0"
curl = "0.4.44"
open = "5.0.1"
reqwest = { version = "0.11.23", features = ["serde_json", "json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
opt-level = "s"
